[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader-boot-config = "0.11.12"
bootloader-x86_64-common = "0.11.12"
bootloader_api = "0.11.12"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.28"
spin = "0.10.0"
uart_16550 = "0.4.0"
x86_64 = "0.15.2"
