[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader-boot-config = "0.11.12"
bootloader-x86_64-common = "0.11.12"
bootloader_api = "0.11.12"
hypervisor = { path = "../hypervisor" }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", default-features = false, features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
log = "0.4.28"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
raw-cpuid = "11.6.0"
spin = "0.10.0"
uart_16550 = "0.4.0"
x86_64 = "0.15.2"
